--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -9,11 +9,12 @@ vertical-center : false
 # additinal css theme
 theme-override: assets/css/PITCHME.css
 
+
 # Behavior
 transition : none
 published : true
 
 # Plugins
 charts : true
-mathjax : TeX-AMS_HTML-full
+mathjax : TeX-MML-AM_HTMLorMML-full
 footnote : "© 2019 Keach Murakami"
