--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -1,5 +1,6 @@
 # Layout
 layout : top-left
+controls: false
 
 # Look-and-Feel
 theme : white
@@ -17,4 +18,4 @@ published : true
 # Plugins
 charts : true
 mathjax : TeX-MML-AM_HTMLorMML-full
-footnote : "© 2019 Keach Murakami"
+footnote : "© 2019 Keach Murakami | 日本農業気象学会2019年"
